--- a/style.css
+++ b/style.css
@@ -1,19 +1,17 @@
 :root {
+  font-family: sans-serif;
+  font-synthesis: none;
+  font-size : 15px;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+
   --black: rgba(15, 15, 15, 1.00);
   --blue-bottom : #031B2C;
   --blue-top : #082F49;
   --grey: #1e293b;
   --white: rgba(251, 251, 251, 0.87);
   --dark-cyan: #020617;
-
-  /* background: linear-gradient(#082F49, #031B2C); */
-  /* color: var(--white); */
-
-  font-family: sans-serif;
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
 * {
@@ -24,7 +22,7 @@
 body {
   min-width: 320px;
   min-height: 100vh;
-  background: linear-gradient(#082F49, #031B2C);
+  background: linear-gradient(var(--blue-top), var(--blue-bottom));
   color: var(--white);
 }
 
@@ -72,7 +70,7 @@ h4 {
 #page-illustration{
   position : relative;
   margin: 0 auto;
-  max-width : 480px;
+  max-width : 400px;
   height : 100vh; 
   background: url(./public/Frame.png) 0% 0% / contain no-repeat;
   background-position: center;
