--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/* {{{ */
 html,
 body,
 div,
@@ -28,10 +27,6 @@ a {
   font-style: italic;
 }
 
-
-/* }}} */
-
-
 :root {
   font-family: Arial, Inter, sans-serif;
   font-optical-sizing: auto;
@@ -39,6 +34,7 @@ a {
   color: rgba(0, 0, 0, 0.9);
   letter-spacing: 0.01ch;
   text-rendering: optimizeLegibility;
+  line-height: 1.2;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
@@ -54,9 +50,9 @@ html {
 
 body {
   position: relative;
-  margin: 0 auto;
+  margin: auto;
+  padding-top: 1rem;
   max-width: 540px;
-  line-height: 1.2;
 
   @media (max-width: 700px) {
     padding-top: 3rem;
